apps/openshift/sidecar-simple-golang-app/deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sidecar-app-service
  namespace: test-app-namespace
spec:
  type: LoadBalancer
  selector:
    app: sidecar-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sidecar-app
  name: sidecar-app
  namespace: test-app-namespace

spec:
  selector:
    matchLabels:
      app: sidecar-app
  replicas: 1
  template:
    metadata:
      labels:
        app: sidecar-app
    spec:
      serviceAccountName: test-app-sa
      containers:
        - name: test-app
          image: quincycheng/api-simple-golang-app:v1.0
          ports:
            - containerPort: 8080
          volumeMounts:
          - mountPath: /run/conjur
            name: conjur-access-token
            readOnly: true
        - image: cyberark/conjur-authn-k8s-client
          imagePullPolicy: Always
          name: authenticator
          volumeMounts:
            - mountPath: /run/conjur
              name: conjur-access-token
            - mountPath: /var/run/secrets/tokens
              name: jwt-token
      volumes:
        - name: conjur-access-token
          emptyDir:
            medium: Memory
        - name: jwt-token
          projected:
            sources:
              - serviceAccountToken:
                  path: jwt
                  expirationSeconds: 6000
                  audience: conjur



---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sidecar-app-route
  namespace: test-app-namespace
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: sidecar-app-service
---
